--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@
     --black-color: #000;
     --nine-color: #999;
     --six-color: #666;
+    --line-color: #e6e6e6;
     --brand-color: #141414;
     --white-color: #fff;
 }
@@ -74,5 +75,43 @@ body {
     padding-right: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+
+/* SITE HEADER STYLES */
+.site-header {
+    padding: 30px 0;
+    border-bottom: 1px solid var(--line-color);
+}
+.site-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.site-logo-link {
+    display: flex;
+}
+.site-logo-img {
+    width: 136px;
+    height: 30px;
+    object-fit: contain;
+    display: block;
+}
+.sitenav {
+    padding-right: 32px;
+}
+.sitenav-list {
+    display: flex;
+    list-style: none;
+}
+.sitenav-item:not(:last-child) {
+    margin-right: 40px;
+}
+.sitenav-link {
+    font-family: var(--franklin-font);
+    font-size: 14px;
+    color: var(--black-color);
+    text-decoration: none;
+    text-transform: capitalize;
 }
 
