add hero section media

--- a/css/main.css
+++ b/css/main.css
@@ -208,4 +208,16 @@ body {
     }
 }
 
+@media (max-width: 768px) {
+    html {
+        font-size: 55%;
+    }
+}
+
+@media (max-width: 576px) {
+    html {
+        font-size: 50%;
+    }
+}
+
 
