cards top section

--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,47 @@ body {
     margin-bottom: 2.8rem;
 }
 
+/* CARDS TOP STYLES */
+.section-cards-top {
+    margin-bottom: 6.5rem;
+}
+.cards-top-list {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: repeat(auto-fill, 1fr);
+    column-gap: 1.9rem;
+}
+.cards-top-item {
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+}
+.cards-top-item-img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    margin-bottom: 2.4rem;
+}
+.cards-title {
+    font-family: var(--tenor-font);
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.4rem;
+    color: var(--black-color);
+    text-transform: uppercase;
+    margin-bottom: 1.5rem;
+    letter-spacing: normal;
+}
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 1200px) {
     
